added flower shop

--- a/index.html
+++ b/index.html
@@ -3,9 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flower Shop</title>
+    <link rel="shortcut icon" href="./flower1.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles/flower.css">
+
 </head>
 <body>
-    
+    <header class="header">
+        <div class="banner-container">
+            <div class="banner-title">
+                <h3 class="banner-head">Let's make <br> beautiful flowers a <br> part of your life.</h3>
+                <p class="banner-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal distribution of letters.</p>
+                <button class="btn">Shop Now</button>
+            </div>
+            <div class="banner-img">
+                <img src="./Flower Asset/pngwing 10.png" alt="">
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="main">
+            <div class="featured">
+                <h3 class="featured-head">Our Featured Flowers</h3>
+                <p class="featured-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout</p>
+            </div>
+        </div>
+        <div class="flowers">
+            <section class="flower-section">
+                <div class="flower1">
+                    <div class="img-section1">
+                        <img class="pink-img1" src="./Flower Asset/pngwing 6.png" alt="">
+                    </div>
+                    <h4 class="pink-flower">Pink Flower Tree</h4>
+                </div>
+                <div class="flower2">
+                    <div class="img-section2">
+                        <img class="pink-img2" src="./Flower Asset/pngwing 5.png" alt="">
+                    </div>
+                    <h4 class="pink-flower">Pink Flower Tree</h4>
+                </div>
+                <div class="flower3">
+                    <div class="img-section3">
+                        <img class="pink-img3" src="./Flower Asset/pngwing 7.png" alt="">
+                    </div>
+                    <h4 class="pink-flower">Pink Flower Tree</h4>
+                </div>
+            </section>
+            <section class="flower-business">
+                <div class="delivary">
+                    <img src="./Flower Asset/Group 57.png" alt="">
+                    <h4 class="business">Same Day Delivery. Click & Collect</h4>
+                </div>
+                <div class="delivary">
+                    <img src="./Flower Asset/Group 58.png" alt="">
+                    <h4 class="business">Fresh Flowers. Local Growers. </h4>
+                </div>
+                <div class="delivary">
+                    <img src="./Flower Asset/Group 59.png" alt="">
+                    <h4 class="business">24/7 Free Support</h4>
+                </div>
+            </section>
+            <section class="hot-deal">
+                <div class="discount-offer">
+                    <h1 class="discount-head">Hot Deal ! Sale Up To 25% <span class="off">Off</span></h1>
+                    <p class="discount-discription">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                        <button class="btn">Sign up</button>
+                </div>
+                <div class="show-flower">
+                    <img src="./Flower Asset/pngwing 8.png" alt="">
+                </div>
+            </section>
+        </div>
+        <div class="featured insta">
+            <h3 class="featured-head">Instagram</h3>
+            <p class="featured-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+        </div>
+        
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
