added footer part

--- a/index.html
+++ b/index.html
@@ -78,10 +78,37 @@
             <h3 class="featured-head">Instagram</h3>
             <p class="featured-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
         </div>
-        
+        <section class="presenting-flower">
+            <div class="see-flower">
+                <div>
+                    <img src="./Flower Asset/Flower 01.png" alt="">
+                </div>
+                <div>
+                    <img src="./Flower Asset/Rectangle 4.png" alt="">
+                </div>
+                <div>
+                    <img src="./Flower Asset/Rectangle 5.png" alt="">
+                </div>
+                <div>
+                    <img src="./Flower Asset/Rectangle 6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="latest-deals">
+            <div class="deals-here">
+                <h1 class="deals-head">Get The Latest Deals</h1>
+            <p class="deals-des">$30 coupon for first shopping</p>
+            <input class="email" type="email" name="" id="" placeholder="Enter your email here....">
+            <button class="btn">Subscribe</button>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="footer">
+            <h1 class="footer-head"><span class="footer-span">Flower</span>Shop</h1>
+            <p class="footer-des">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <p class="credit">@2020-2023, FlowerShop.com. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
