--- a/index.html
+++ b/index.html
@@ -73,6 +73,32 @@
                     <img src="./Flower Asset/pngwing 8.png" alt="">
                 </div>
             </section>
+            <section class="our-blog">
+                <div class="blog-head">
+                    <h1 class="blog-title"> Our Blog</h1>
+                    <button class="btn">Go to Blog</button>
+                </div>
+                <div class="blog-picture">
+                    <div class="blog-picture1">
+                        <img class="blog-img" src="./Flower Asset/blog1.jpg" alt="">
+                        <p class="time">03 MAR, 2023</p>
+                        <p class="blog-des">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <button class="btn">Read More</button>
+                    </div>
+                    <div class="blog-picture1">
+                        <img class="blog-img" src="./Flower Asset/blog2.jpg" alt="">
+                        <p class="time">23 APR, 2023</p>
+                        <p class="blog-des">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <button class="btn">Read More</button>
+                    </div>
+                    <div class="blog-picture1">
+                        <img class="blog-img" src="./Flower Asset/blog3.jpg" alt="">
+                        <p class="time">14 JUNE, 2023</p>
+                        <p class="blog-des">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <button class="btn">Read More</button>
+                    </div>
+                </div>
+            </section>
         </div>
         <div class="featured insta">
             <h3 class="featured-head">Instagram</h3>
