--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
                         <img class="blog-img" src="./Flower Asset/blog1.jpg" alt="">
                         <p class="time">03 MAR, 2023</p>
                         <p class="blog-des">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                        <button class="button">Read More</button>
+                        <button class="btn">Read More</button>
                     </div>
                     <div class="blog-picture1">
                         <img class="blog-img" src="./Flower Asset/blog2.jpg" alt="">
                         <p class="time">23 APR, 2023</p>
                         <p class="blog-des">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                        <button class="button">Read More</button>
+                        <button class="btn">Read More</button>
                     </div>
                     <div class="blog-picture1">
                         <img class="blog-img" src="./Flower Asset/blog3.jpg" alt="">
                         <p class="time">14 JUNE, 2023</p>
                         <p class="blog-des">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                        <button class="button">Read More</button>
+                        <button class="btn">Read More</button>
                     </div>
                 </div>
             </section>
